Open Mason: Cleanup of UI related files XXI