@@ -7,46 +7,22 @@ import com.openmason.ui.modelBrowser.categorizers.ItemCategorizer;
 import imgui.ImGui;
 import imgui.flag.ImGuiCol;
 import imgui.flag.ImGuiTreeNodeFlags;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+
+import java.util.List;
 
 /**
  * Renders the sidebar navigation panel for the Model Browser.
- *
- * <p>Provides a Windows Explorer-style folder tree showing:</p>
- * <ul>
- *   <li>All Models - Show everything</li>
- *   <li>Blocks - Categorized by terrain, ore, wood, plants, other</li>
- *   <li>Items - Categorized by tools, materials, other</li>
- *   <li>Entity Models - 3D models like cows</li>
- *   <li>.OMO Models - Custom models from .OMO files</li>
- *   <li>Recent Files - Recently opened models</li>
- * </ul>
- *
- * <p>Following SOLID principles:</p>
- * <ul>
- *   <li><strong>Single Responsibility</strong>: Only renders the sidebar navigation</li>
- *   <li><strong>Dependency Inversion</strong>: Depends on controller abstraction</li>
- * </ul>
  */
-public class SidebarRenderer {
+public record SidebarRenderer(ModelBrowserController controller) {
 
-    private static final Logger logger = LoggerFactory.getLogger(SidebarRenderer.class);
 
     // UI constants
-    private static final float INDENT_SPACING = 16.0f;
-    private static final int TREE_NODE_FLAGS_LEAF = ImGuiTreeNodeFlags.Leaf | ImGuiTreeNodeFlags.NoTreePushOnOpen;
     private static final int TREE_NODE_FLAGS_DEFAULT = ImGuiTreeNodeFlags.OpenOnArrow | ImGuiTreeNodeFlags.OpenOnDoubleClick;
-
-    private final ModelBrowserController controller;
 
     /**
      * Creates a new sidebar renderer.
-     *
-     * @param controller The controller managing business logic
      */
-    public SidebarRenderer(ModelBrowserController controller) {
-        this.controller = controller;
+    public SidebarRenderer {
     }
 
     /**
@@ -60,7 +36,7 @@ public class SidebarRenderer {
         // All Models - top-level category
         if (renderCategoryItem("All Models", selectedCategory)) {
             state.setSelectedCategory("All Models");
-            state.setNavigationPath(java.util.Arrays.asList("Home"));
+            state.setNavigationPath(List.of("Home"));
         }
 
         ImGui.spacing();
@@ -129,7 +105,7 @@ public class SidebarRenderer {
     /**
      * Renders a single category item with selection highlighting.
      *
-     * @param displayName The name to display
+     * @param displayName      The name to display
      * @param selectedCategory The currently selected category
      * @return true if the item was clicked
      */
@@ -140,9 +116,9 @@ public class SidebarRenderer {
     /**
      * Renders a single category item with selection highlighting.
      *
-     * @param displayName The name to display
+     * @param displayName      The name to display
      * @param selectedCategory The currently selected category
-     * @param categoryId The category identifier for selection comparison
+     * @param categoryId       The category identifier for selection comparison
      * @return true if the item was clicked
      */
     private boolean renderCategoryItem(String displayName, String selectedCategory, String categoryId) {
@@ -170,7 +146,8 @@ public class SidebarRenderer {
      *
      * @return The model browser controller
      */
-    public ModelBrowserController getController() {
+    @Override
+    public ModelBrowserController controller() {
         return controller;
     }
 }
